<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cog.Dropinn.Traveller.SavedListingsFragment"
    android:layout_margin="25dp">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saved_small"
        android:textStyle="bold"
        android:textSize="30sp"
        android:id="@+id/save_tv"
        android:layout_marginTop="30dp"
        android:textColor="#696969"/>
    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@+id/save_tv"-->
        <!--android:layout_marginTop="50dp"-->
        <!--android:text="@string/save_content"-->
        <!--android:textSize="13sp"-->
        <!--/>-->
    <com.codesgood.views.JustifiedTextView
        android:text="@string/save_content"
        android:layout_below="@+id/save_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="30dp"
        android:id="@+id/savecontent_tv"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_exploring"
        android:layout_below="@+id/savecontent_tv"
        android:layout_marginTop="30dp"
        android:textColor="@color/appColor"
        android:textSize="17sp"/>

</RelativeLayout>
